--- a/TopSkillsWeb/Views/Attendance/AttendanceTable.cshtml
+++ b/TopSkillsWeb/Views/Attendance/AttendanceTable.cshtml
@@ -3,29 +3,39 @@
 <div class="container-xl mt-3">
     <div class="card">
         <ul class="AttendanceUL">
-            @foreach (var item in Model)
+            @if (Model.Count() > 0)
+            {
+                @foreach (var item in Model)
+                {
+                    <li class="AttendanceItem">
+                        <div class="AttendanceNameGroup">
+                            <div>
+                                @item.Group.Name
+                            </div>
+                            <div>
+                                @item.DateVisiting.ToShortDateString()
+                            </div>
+                        </div>
+                        <div class="BtnContainer">
+                            @if (item.DateClose == null)
+                            {
+                                <a class="btn btn-ghost-success" onclick="OnStartAttendance(@item.Group.GroupId, '@item.DateVisiting.ToShortDateString()')">@Resource.AttendanceStart</a>
+                            }
+                            else
+                            {
+                                <a class="btn btn-ghost-success disabled">@Resource.AttendanceEnd</a>
+                            }
+                        </div>
+                    </li>
+                }
+            }
+            else
             {
                 <li class="AttendanceItem">
-                    <div class="AttendanceNameGroup">
-                        <div>
-                            @item.Group.Name
-                        </div>
-                        <div>
-                            @item.DateVisiting.ToShortDateString()
-                        </div>
-                    </div>
-                    <div class="BtnContainer">
-                        @if(item.DateClose == null)
-                        {
-                            <a class="btn btn-ghost-success" onclick="OnStartAttendance(@item.Group.GroupId, '@item.DateVisiting.ToShortDateString()')">@Resource.AttendanceStart</a>
-                        }
-                        else
-                        {
-                            <a class="btn btn-ghost-success disabled">@Resource.AttendanceEnd</a>
-                        }
-                    </div>
+                    <span>@Resource.EmptyAttendance</span>
                 </li>
             }
+            
         </ul>
     </div>
 </div>
