--- a/TopSkillsWeb/wwwroot/css/site.css
+++ b/TopSkillsWeb/wwwroot/css/site.css
@@ -182,3 +182,10 @@ ul.contextMenu, li.dropdown-item, .dropdown-item {
 .AbenementTBody td:first-child{
     text-indent: 10%;
 }
+
+.pr-10 {
+    padding: 0 10px 0 0;
+}
+.pl-10 {
+    padding: 0 0 0 10px;
+}
