Добавил поле Description в AspNetRoles Добавлена инфа о списке ролей и доступов в акаунте

--- a/TopSkillsWeb/Views/Account/Tabs/MyAccountTabs.cshtml
+++ b/TopSkillsWeb/Views/Account/Tabs/MyAccountTabs.cshtml
@@ -37,7 +37,7 @@
             <input type="email" class="form-control" value="@Model.Email" id="Email">
         </div>
     </div>
-    <h3 class="card-title mt-4">SecretPhrase</h3>
+    @* <h3 class="card-title mt-4">SecretPhrase</h3>
     <p class="card-subtitle">Ключ, используемый для шифрования ваших данных.</p>
     <div>
         @if (ViewBag.SecretKey == null)
@@ -77,7 +77,7 @@
             </div>
         }
 
-    </div>
+    </div> *@
     <h3 class="card-title mt-4">Пароль</h3>
     <p class="card-subtitle">Не менее 5 символов.</p>
     <div>
