--- a/TopSkillsWeb/Views/Account/AccountSettings.cshtml
+++ b/TopSkillsWeb/Views/Account/AccountSettings.cshtml
@@ -9,10 +9,10 @@
                     <h4 class="subheader">@Resource.Settings</h4>
                     <div class="list-group list-group-transparent">
                         <a onclick="OnChangeTabSettings(0, event)" class="list-group-item list-group-item-action d-flex align-items-center active">@Resource.Account</a>
-                        <a title="В процессе разработки" class="list-group-item list-group-item-action d-flex align-items-center disabled">Мои уведомления</a>
-                        <a title="В процессе разработки" class="list-group-item list-group-item-action d-flex align-items-center disabled">Стронние сервисы</a>
+                        <a onclick="OnChangeTabSettings(1, event)" class="list-group-item list-group-item-action d-flex align-items-center">@Resource.MyRoles</a>
+                        @*<a title="В процессе разработки" class="list-group-item list-group-item-action d-flex align-items-center disabled">Стронние сервисы</a> *@
                     </div>
-                    <h4 class="subheader mt-4">Поддержка</h4>
+                    <h4 class="subheader mt-4">@Resource.Support</h4>
                     <div class="list-group list-group-transparent">
                         <a onclick="OnChangeTabSettings(3, event)" title="В процессе разработки" class="list-group-item list-group-item-action">Обратная связь</a>
                     </div>
