--- a/TopSkillsWeb/Views/Shared/_Layout.cshtml
+++ b/TopSkillsWeb/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                         <div class="container-xl">
                             <ul class="navbar-nav">
                                 <li id="Home" class="nav-item">
-                                    <a class="nav-link" href="./">
+                                    <a class="nav-link" asp-action="Index" asp-controller="Home">
                                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                                             <!-- Download SVG icon from http://tabler-icons.io/i/home -->
                                             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><polyline points="5 12 3 12 12 3 21 12 19 12" /><path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" /><path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" /></svg>
@@ -105,7 +105,7 @@
                                                 @Resource.Students
                                             </a>
                                             <a class="dropdown-item" asp-action="Index" asp-controller="Attendance">
-                                                Календарь
+                                                @Resource.Calendar
                                             </a>
                                             @* <div class="dropend">
                                             <a class="dropdown-item dropdown-toggle" href="#sidebar-cards" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
@@ -137,7 +137,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item dropdown">
+                                <li id="Administration" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#navbar-help" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
                                         <span class="nav-link-icon d-md-none d-lg-inline-block">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-cog" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -158,10 +158,10 @@
                                         </span>
                                     </a>
                                     <div class="dropdown-menu">
-                                        @* <a class="dropdown-item" href="./docs/">
-                                        Documentation
+                                         <a class="dropdown-item" asp-controller="Accesses" asp-action="Index">
+                                        @Resource.Accesses
                                         </a>
-                                        <a class="dropdown-item" href="./changelog.html">
+                                        @*<a class="dropdown-item" href="./changelog.html">
                                         Changelog
                                         </a>
                                         <a class="dropdown-item" href="https://github.com/tabler/tabler" target="_blank" rel="noopener">
@@ -220,7 +220,7 @@
             localStorage.setItem('CurrentTab', $(e.currentTarget).parent('.nav-item').prop('id'))
         });
         let nowTab = localStorage.getItem('CurrentTab');
-        nowTab ??= 'Home';
+        nowTab = (nowTab == '' || nowTab == null ? 'Home' : nowTab);
         $('#' + nowTab).addClass('active');
         $.ajaxSetup({
             error: function (jqXHR, textStatus, errorThrown, xhr, status, error) {
